--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.14.1",
     "@types/node": "20.3.2",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
@@ -18,11 +20,14 @@
     "framer-motion": "^10.12.17",
     "next": "13.4.7",
     "next-images": "^1.8.5",
+    "next-sanity": "^5.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.1",
     "react-simple-typewriter": "^5.0.1",
     "react-social-icons": "^5.15.0",
+    "sanity": "^3.14.1",
+    "styled-components": "^5.3.11",
     "typescript": "5.1.5"
   },
   "devDependencies": {
